--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.11.1
+attrs==23.1.0
 blinker==1.6.2
 click==8.1.5
 colorama==0.4.6
@@ -10,9 +11,13 @@ Flask-SQLAlchemy==3.0.5
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.18.4
+jsonschema-specifications==2023.7.1
 Mako==1.2.4
 MarkupSafe==2.1.3
 PyJWT==2.7.0
+referencing==0.30.0
+rpds-py==0.9.2
 SQLAlchemy==2.0.19
 typing_extensions==4.7.1
 Werkzeug==2.3.6
